--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 repository = "https://github.com/reswitched/robocop-ng"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.11"
 python-dateutil = "^2.8.2"
 humanize = "^4.8.0"
 parsedatetime = "^2.6"
@@ -19,5 +19,5 @@ gidgethub = "^5.3.0"
 [tool.poetry.dev-dependencies]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
